logs/goby.log
Listing '.'...
Listing './bin'...
Compiling './bin/GobyAlignmentStats.py'...
***   File "./bin/GobyAlignmentStats.py", line 31
    print "usage:", sys.argv[0], "[-h|--help] [-v|--verbose] <basename>"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/GobyAlignmentToText.py'...
***   File "./bin/GobyAlignmentToText.py", line 29
    print "usage:", sys.argv[0], "[-h|--help] [-v|--verbose] [-f|--format <plain|sam>] [-o|--output <file>] <basename>"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/GobyCompactToFasta.py'...
***   File "./bin/GobyCompactToFasta.py", line 29
    print "usage:", sys.argv[0], "[-h|--help] [-v|--verbose] [-f|--format <fasta|fastq>] [-o|--output <output-filename>] <filename>"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/GobyReadsStats.py'...
***   File "./bin/GobyReadsStats.py", line 30
    print "usage:", sys.argv[0], "[-h|--help] [-v|--verbose] <fileame>"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/goby'...
Compiling './lib/python3.5/site-packages/goby/Alignments.py'...
***   File "./lib/python3.5/site-packages/goby/Alignments.py", line 85
    print "Reading properties from", stats_filename
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/goby/MessageChunks.py'...
***   File "./lib/python3.5/site-packages/goby/MessageChunks.py", line 65
    print "Reading data from", filename
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/goby-2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
